Fixed a reported issue. Tweaked the rendering logic to avoid flicker (a bit of a step back for faster browsers; needs some more work). Fixed URLs broken during the reorg.

--- a/examples/examples.css
+++ b/examples/examples.css
@@ -19,7 +19,7 @@ ul {
 }
 
 li {
-    background: url("images/arrow_right_spearmint.png") no-repeat center left;
+    background: url("../images/arrow_right_spearmint.png") no-repeat center left;
     padding: 0px;
     padding-left: 14px;
     list-style: none;
